# guildmaster-prototype

./: .gitignore  README.md  build_client.sh  run_client.bat  run_client.sh  run_server.bat  run_server.sh  setup.sh
client/: CMakeLists.txt  README.md  compile_flags.txt  run_client.sh
client/include/: color_utils.h  game.h  network.h  player_manager.h  ui_manager.h
client/src/: color_utils.cpp  game.cpp  main.cpp  network.cpp  player_manager.cpp  ui_manager.cpp
debug/: README.md  start_client.sh  start_debug_session.sh  start_server.sh
server/: README.md  build.gradle.kts  build_server.sh  run_server.sh  settings.gradle.kts
server/src/main/kotlin/com/guildmaster/server/: Application.kt  GameServer.kt  MessageHandler.kt  Protocol.kt  Session.kt  SessionManager.kt
server/src/main/kotlin/com/guildmaster/server/broadcast/: Broadcaster.kt
server/src/main/kotlin/com/guildmaster/server/cli/: CommandContext.kt  CommandDispatcher.kt  CommandHandler.kt  CommandNode.kt
server/src/main/kotlin/com/guildmaster/server/config/: SystemIdentity.kt
server/src/main/kotlin/com/guildmaster/server/gameplay/: GameMap.kt  GameService.kt
server/src/main/kotlin/com/guildmaster/server/network/: Broadcaster.kt  Protocol.kt  TcpClientHandler.kt  TcpService.kt  UdpService.kt
server/src/main/kotlin/com/guildmaster/server/player/: Player.kt
server/src/main/kotlin/com/guildmaster/server/serialization/: Vector2fSerializer.kt
server/src/main/kotlin/com/guildmaster/server/session/: PlayerSession.kt  Response.kt  (+2 more)
server/src/main/resources/: logback.xml
shared/: protocol.md
(+15 files in other folders)
